<resources>
    <string name="app_name">Fitty</string>
    <string name="fresh">新</string>
    <string name="top_article">置顶</string>
    <string name="title_home">首页</string>
    <string name="title_square">广场</string>
    <string name="title_hierarchy">体系</string>
    <string name="title_wechat_office_account">公众号</string>
    <string name="title_project">项目</string>
    <string name="recommend">推荐</string>
    <string name="daily_ask">问答</string>
</resources>