<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_square"
        android:icon="@drawable/ic_square"
        android:title="@string/title_square" />

    <item
        android:id="@+id/navigation_hierarchy"
        android:icon="@drawable/ic_hierarchy"
        android:title="@string/title_hierarchy" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_wechat_account"
        android:title="@string/title_wechat_office_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_project"
        android:title="@string/title_project" />

</menu>